5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4446/executions/1650_2449.log
== TEST (2019-04-18 12:07:34) 
-- CODE:
a=float(input("digite a: "))
b=float(input("digite b: "))
c=float(input("digite c: "))
d=float(input("digite d: "))
e=float(input("digite e: "))
f=float(input("digite f: "))

x= (c * e - b * f) / k
y=(a * f - c * d) / k
k= (a * e - b * d)
if k==0:
	print("Nao tem solucao")
else:
	print(x)
	print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x= (c * e - b * f) / k
NameError: name 'k' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-18 12:08:45) 
-- CODE:
a=float(input("digite a: "))
b=float(input("digite b: "))
c=float(input("digite c: "))
d=float(input("digite d: "))
e=float(input("digite e: "))
f=float(input("digite f: "))

k=(a * e - b * d)
x=(c * e - b * f) / k
y=(a * f - c * d) / k

if k==0:
	print("Nao tem solucao")
else:
	print(x)
	print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    x=(c * e - b * f) / k
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-18 12:09:16) 
-- CODE:
a=float(input("digite a: "))
b=float(input("digite b: "))
c=float(input("digite c: "))
d=float(input("digite d: "))
e=float(input("digite e: "))
f=float(input("digite f: "))

k=(a * e - b * d)
x=(c * e - b * f) / k
y=(a * f - c * d) / k

if k==0:
	print("Nao tem solucao")
else:
	print(x)
	print(y)
-- EXECUTION TIME:
0.164045
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1650/2449/main.py", line 9, in <module>
    x=(c * e - b * f) / k
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-18 12:10:08) 
-- CODE:
a=float(input("digite a: "))
b=float(input("digite b: "))
c=float(input("digite c: "))
d=float(input("digite d: "))
e=float(input("digite e: "))
f=float(input("digite f: "))

k=(a * e - b * d)
x=(c * e - b * f) / k
y=(a * f - c * d) / k

if k==0:
	print("Nao tem solucao")
else:
	print(x)
	print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    x=(c * e - b * f) / k
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-18 12:12:14) 
-- CODE:
a=float(input("digite a: "))
b=float(input("digite b: "))
c=float(input("digite c: "))
d=float(input("digite d: "))
e=float(input("digite e: "))
f=float(input("digite f: "))

k=(a * e - b * d)

if k==0:
	x=(c * e - b * f) / k
	y=(a * f - c * d) / k
	print("Nao tem solucao")
else:
	x=(c * e - b * f) / k
	y=(a * f - c * d) / k
	print(x)
	print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    x=(c * e - b * f) / k
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-18 12:13:34) 
-- CODE:
a=float(input("digite a: "))
b=float(input("digite b: "))
c=float(input("digite c: "))
d=float(input("digite d: "))
e=float(input("digite e: "))
f=float(input("digite f: "))


if k==0:
	k=(a * e - b * d)
	x=(c * e - b * f) / k
	y=(a * f - c * d) / k

	print("Nao tem solucao")
else:
	k=(a * e - b * d)
	x=(c * e - b * f) / k
	y=(a * f - c * d) / k
	print(x)
	print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    if k==0:
NameError: name 'k' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-18 12:14:13) 
-- CODE:
a=float(input("digite a: "))
b=float(input("digite b: "))
c=float(input("digite c: "))
d=float(input("digite d: "))
e=float(input("digite e: "))
f=float(input("digite f: "))
k=(a * e - b * d)


if k==0:
	k=(a * e - b * d)
	x=(c * e - b * f) / k
	y=(a * f - c * d) / k

	print("Nao tem solucao")
else:
	k=(a * e - b * d)
	x=(c * e - b * f) / k
	y=(a * f - c * d) / k
	print(x)
	print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    x=(c * e - b * f) / k
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-18 12:14:22) 
-- CODE:
a=float(input("digite a: "))
b=float(input("digite b: "))
c=float(input("digite c: "))
d=float(input("digite d: "))
e=float(input("digite e: "))
f=float(input("digite f: "))
k=(a * e - b * d)


if k==0:
	k=(a * e - b * d)
	x=(c * e - b * f) / k
	y=(a * f - c * d) / k

	print("Nao tem solucao")
else:
	k=(a * e - b * d)
	x=(c * e - b * f) / k
	y=(a * f - c * d) / k
	print(x)
	print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    x=(c * e - b * f) / k
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 18:15:16) 
-- CODE:
a=float(input("digite a: "))
b=float(input("digite b: "))
c=float(input("digite c: "))
d=float(input("digite d: "))
e=float(input("digite e: "))
f=float(input("digite f: "))

k=(a * e - b * d)
w=(c * e - b * f)
q=(a * f - c * d)
x= w / k
y= q / k
if (k == 0):
	print("Nao tem solucao")
else:
	
	print(x)
	print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    x= w / k
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 18:15:42) 
-- CODE:
a=float(input("digite a: "))
b=float(input("digite b: "))
c=float(input("digite c: "))
d=float(input("digite d: "))
e=float(input("digite e: "))
f=float(input("digite f: "))

k=(a * e - b * d)
w=(c * e - b * f)
q=(a * f - c * d)
x= w / k
y= q / k
if (k == 0):
	print("Nao tem solucao")
else:
	
	print(x)
	print(y)
-- EXECUTION TIME:
0.148719
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1650/2449/main.py", line 11, in <module>
    x= w / k
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 18:17:11) 
-- CODE:
a=float(input("digite a: "))
b=float(input("digite b: "))
c=float(input("digite c: "))
d=float(input("digite d: "))
e=float(input("digite e: "))
f=float(input("digite f: "))

k=(a * e - b * d)
w=(c * e - b * f)
q=(a * f - c * d)

if (k == 0):
	print("Nao tem solucao")
else:
	x= w / k
	y= q / k
	print(x)
	print(y)
-- EXECUTION TIME:
0.124787
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
Nao tem solucao
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
-0.22641509433962265
1.528301886792453
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:
-0.15705128205128205
1.1618589743589745
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
